# s3dict

./: README.md  boto3_extension_test.py  pyproject.toml  s3dict.py  test.py  test_s3dict.py
examples/: basic_usage.py
s3dict/: __init__.py
tests/: test_s3dict.py
